# Snake

./: README.md  Snake.py  pyproject.toml  setup.cfg  setup.py  update.sh
src/pysnakepygame/: __init__.py  __main__.py
src/pysnakepygame.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
